--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
+
     <header class="header-section">
+        <div class="video-wrapper">
+            <video loop autoplay muted style="width: 100%;">
+                <source src="video/banner.mp4" type="video/mp4">
+            </video>
+        </div>
         <div class="header-top">
             <div class="container">
                 <div class="ht-left">
