All pages footer modified

--- a/login.html
+++ b/login.html
@@ -220,7 +220,6 @@
         </div>
     </div>
 
-
     <footer class="footer-section">
         <div class="container">
             <div class="row">
@@ -232,8 +231,7 @@
                         <ul>
                             <li>Address: Kathmandu, Nepal</li>
                             <li>Phone: +977-987654321</li>
-                            <li>Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                                    data-cfemail="97fff2fbfbf8b9f4f8fbf8e5fbfef5d7f0faf6fefbb9f4f8fa">[email&#160;protected]</a>
+                            <li>Email: tibetcollectives@gmail.com
                             </li>
                         </ul>
                         <div class="footer-social">
