--- a/product-single.html
+++ b/product-single.html
@@ -190,7 +190,7 @@
     <section id="product-detail-wrapper" class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-7 col-md-6 col-12">
                     <div class="product-carousel">
                         <!-- Swiper and EasyZoom plugins start -->
                         <div class="swiper-container gallery-top" style="height: 400px">
@@ -257,7 +257,7 @@
                         <!-- Swiper and EasyZoom plugins end -->
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
+                <div class="col-lg-5 col-md-6 col-12">
                     <div class="d-flex justify-content-center h-100 product-detail flex-column">
                         <div class="about my-2">
                             <div class="d-flex flex-row align-items-center mb-2">
@@ -308,6 +308,9 @@
                                     <span class="orange"></span>
                                 </label>
                             </div>
+                        </div>
+                        <div class="category mb-2">
+                            Category: <span>Thanka</span>
                         </div>
                         <div class="mt-2">
                             <button class="primary-btn">
@@ -448,7 +451,7 @@
                                         </div>
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
-                                            <li class="quick-view"><a href="#">+ Quick View</a></li>
+                                            <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
                                             <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
                                         </ul>
                                     </div>
@@ -473,7 +476,7 @@
                                         </div>
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
-                                            <li class="quick-view"><a href="#">+ Quick View</a></li>
+                                            <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
                                             <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
                                         </ul>
                                     </div>
@@ -498,7 +501,7 @@
                                         </div>
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
-                                            <li class="quick-view"><a href="#">+ Quick View</a></li>
+                                            <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
                                             <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
                                         </ul>
                                     </div>
@@ -532,8 +535,7 @@
                         <ul>
                             <li>Address: Kathmandu, Nepal</li>
                             <li>Phone: +977-987654321</li>
-                            <li>Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                                    data-cfemail="97fff2fbfbf8b9f4f8fbf8e5fbfef5d7f0faf6fefbb9f4f8fa">[email&#160;protected]</a>
+                            <li>Email: tibetcollectives@gmail.com
                             </li>
                         </ul>
                         <div class="footer-social">
