--- a/register.html
+++ b/register.html
@@ -213,7 +213,6 @@
             </div>
         </div>
     </div>
-
     <footer class="footer-section">
         <div class="container">
             <div class="row">
@@ -225,8 +224,7 @@
                         <ul>
                             <li>Address: Kathmandu, Nepal</li>
                             <li>Phone: +977-987654321</li>
-                            <li>Email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                                    data-cfemail="97fff2fbfbf8b9f4f8fbf8e5fbfef5d7f0faf6fefbb9f4f8fa">[email&#160;protected]</a>
+                            <li>Email: tibetcollectives@gmail.com
                             </li>
                         </ul>
                         <div class="footer-social">
@@ -314,7 +312,6 @@
     </script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/main.js"></script>
-
 </body>
 
 </html>
