--- a/order-success.html
+++ b/order-success.html
@@ -189,7 +189,7 @@
     <section id="order_list_top" class="py-4">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-2 col-4 m-auto text-center ">
+                <div class="col-lg-2 col-4 mx-auto my-2 text-center ">
                     <a href="shopping-cart.html">
                         <div class="img_order_list ">
                             <div class="img_block_icon">
@@ -201,7 +201,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-4 m-auto text-center">
+                <div class="col-lg-2 col-4 mx-auto my-2 text-center">
                     <a href="shipping.html">
                         <div class="img_order_list">
                             <div class="img_block_icon">
@@ -213,7 +213,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-4 m-auto text-center">
+                <div class="col-lg-2 col-4 mx-auto my-2 text-center">
                     <a href="delivery.html">
                         <div class="img_order_list">
                             <div class="img_block_icon">
@@ -225,7 +225,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-5 m-auto text-center">
+                <div class="col-lg-2 col-4 mx-auto my-2 text-center">
                     <a href="payment.html">
                         <div class="img_order_list">
                             <div class="img_block_icon">
@@ -237,7 +237,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-2 col-5 m-auto text-center">
+                <div class="col-lg-2 col-4 mx-auto my-2 text-center">
                     <a href="order-success.html">
                         <div class="img_order_list">
                             <div class="img_block_icon">
@@ -253,101 +253,65 @@
         </div>
     </section>
     <!--======================================================= ORDER TOP LIST END ======-->
-    <section class="shopping-cart spad">
+    <!--======================================================= CART START ======-->
+    <section id="cart_user" class="py-5">
         <div class="container">
-            <div class="row ">
-                <div class="col-xl-12 col-12 m-auto">
-                    <div class="cart-table table-responsive-xl">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Image</th>
-                                    <th class="p-name">Product Name</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                    <th><i class="ti-close"></i></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="cart-pic first-row"><img
-                                            src="img/cart-page/xproduct-1.jpg.pagespeed.ic.W9n_F9KPaD.jpg" alt=""></td>
-                                    <td class="cart-title first-row">
-                                        <h5>Pure Pineapple</h5>
-                                    </td>
-                                    <td class="p-price first-row">$60.00</td>
-                                    <td class="qua-col first-row">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price first-row">$60.00</td>
-                                    <td class="close-td first-row"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img
-                                            src="img/cart-page/xproduct-2.jpg.pagespeed.ic.Akxx72o0SN.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>American lobster</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img
-                                            src="img/cart-page/xproduct-3.jpg.pagespeed.ic.SVKwYryXPo.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>Guangzhou sweater</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                            </tbody>
-                        </table>
+            <div class="row">
+                <div class="col-xl-8 col-md-12 bg-white p-3">
+                    <div class="title_delivery mb-2">
+                        <h6>Order Confirmation</h6>
+                    </div>
+                    <div class="checkout-man box_shado text-center padding">
+                        <div class="round-checkout px-5">
+                            <div class="round-block-checkout">
+                                <span><i class="fa fa-check text-white" aria-hidden="true"></i></span>
+                            </div>
+                            <h6 class="font-weight-bold text-dark mt-3">Congratulation! You order has been processed
+                            </h6>
+                            <p class=" mb-4"> <small>
+                                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias impedit omnis
+                                    nemo maxime ab,
+                                    pariatur nobis qui hic sit natusr?
+                                </small> </p>
+                            <div
+                                class="btn_groups-single btn_groups-single w-xl-25 w-100 text-center m-auto text-center m-auto">
+                                <a href="index.html"> <button class="primary-btn">Back to Home</button>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="row justify-content-center mt-2">
                         <div class="col-12 mb-3">
                             <div
                                 class="button_block d-flex justify-content-around align-items-center flex-wrap mb-4 mb-md-0">
-                                <a href="" class="my-2"> <span><i class="fa fa-reply-all"></i></span> Return to shop</a>
+                                <a href="" class="my-2"> <span><i class="fa fa-reply-all"></i></span> Return to
+                                    shop</a>
                                 <!-- <a href="" class="btn_custom">Continue to Shipping</a> -->
-                                <a href="delivery_info.html"> <button class="primary-btn py-2">Continue to Shipping Info
+                                <a href="delivery_info.html"> <button class="primary-btn py-2">Continue to Shipping
+                                        Info
                                     </button></a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-12 m-auto">
-                    <div class="proceed-checkout">
-                        <ul>
-                            <li class="subtotal">Subtotal <span>$240.00</span></li>
-                            <li class="cart-total">Total <span>$240.00</span></li>
-                        </ul>
-                        <a href="#" class="proceed-btn">PROCEED TO CHECK OUT</a>
+                <div class="col-xl-4 col-md-7 m-auto m-xl-0">
+                    <div class="row justify-content-end">
+                        <div class="col-12">
+                            <div class="proceed-checkout">
+                                <ul>
+                                    <li class="subtotal">Subtotal <span>$240.00</span></li>
+                                    <li class="cart-total">Total <span>$240.00</span></li>
+                                </ul>
+                                <a href="#" class="proceed-btn">PROCEED TO CHECK OUT</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!--======================================================= CART END ======-->
+
     <footer class="footer-section">
         <div class="container">
             <div class="row">
