--- a/delivery.html
+++ b/delivery.html
@@ -253,76 +253,89 @@
         </div>
     </section>
     <!--======================================================= ORDER TOP LIST END ======-->
-    <section class="shopping-cart spad">
+    <!--======================================================= CART START ======-->
+    <section id="cart_user" class="py-5">
         <div class="container">
-            <div class="row ">
-                <div class="col-xl-12 col-12 m-auto">
-                    <div class="cart-table table-responsive-xl">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th>Image</th>
-                                    <th class="p-name">Product Name</th>
-                                    <th>Price</th>
-                                    <th>Quantity</th>
-                                    <th>Total</th>
-                                    <th><i class="ti-close"></i></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="cart-pic first-row"><img
-                                            src="img/cart-page/xproduct-1.jpg.pagespeed.ic.W9n_F9KPaD.jpg" alt=""></td>
-                                    <td class="cart-title first-row">
-                                        <h5>Pure Pineapple</h5>
-                                    </td>
-                                    <td class="p-price first-row">$60.00</td>
-                                    <td class="qua-col first-row">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
+            <div class="row">
+                <div class="col-xl-8 col-md-12 bg-white p-3">
+                    <div class="title_delivery mb-4">
+                        <h6>smartkinmel.com Products</h6>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="delivery_info_block d-flex align-items-center mb-4">
+                                        <div class="delivery_info_img">
+                                            <img src="http://127.0.0.1:8000/uploads/products/thumbnail/RbhtpeVo51vaSwVGjoBNwlhPjlgdIo57EJN8U8Dz.jpeg"
+                                                class="img-fluid" alt="">
+                                        </div>
+                                        <div class="delivery_info_text ml-3">
+                                            <h5> Pearl Green Tea</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="delivery_info_block d-flex align-items-center mb-4">
+                                        <div class="delivery_info_img">
+                                            <img src="http://127.0.0.1:8000/uploads/products/thumbnail/RbhtpeVo51vaSwVGjoBNwlhPjlgdIo57EJN8U8Dz.jpeg"
+                                                class="img-fluid" alt="">
+                                        </div>
+                                        <div class="delivery_info_text ml-3">
+                                            <h5> Pearl Green Tea</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-xl-6 col-md-12">
+                                    <div class="shipping_radio custom-radio">
+                                        <input type="radio" class="shipping_radio-input" id="defaultUnchecked"
+                                            name="defaultExampleRadios">
+                                        <label class="shipping_radio-label" for="defaultUnchecked">Home Delivery</label>
+                                    </div>
+                                </div>
+                                <div class="col-xl-6 col-md-12">
+                                    <div class="shipping_radio custom-radio">
+                                        <input type="radio" class="shipping_radio-input" id="defaultUnchecke"
+                                            name="defaultExampleRadios">
+                                        <label class="shipping_radio-label" for="defaultUnchecke">Local Pickup </label>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="container_block">
+                                        <div class="main_delivery_info">
+                                            <select id="select_box">
+                                                <option value="1">Select your nearest pickup point</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                                <option value="4">Four</option>
+                                            </select>
+                                            <div class="dropdown-select wide" tabindex="0"><span
+                                                    class="current">Four</span>
+                                                <div class="list">
+                                                    <!-- <div class="dd-search">
+                            <input id="txtSearchValue" autocomplete="off" onkeyup="filter()" class="dd-searchbox"
+                              type="text">
+                          </div> -->
+                                                    <ul>
+                                                        <li class="option" data-value="1" data-display-text="">Select
+                                                            your nearest pickup point</li>
+                                                        <li class="option " data-value="2" data-display-text="">Two</li>
+                                                        <li class="option " data-value="3" data-display-text="">Three
+                                                        </li>
+                                                        <li class="option selected" data-value="4" data-display-text="">
+                                                            Four</li>
+                                                    </ul>
+                                                </div>
                                             </div>
                                         </div>
-                                    </td>
-                                    <td class="total-price first-row">$60.00</td>
-                                    <td class="close-td first-row"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img
-                                            src="img/cart-page/xproduct-2.jpg.pagespeed.ic.Akxx72o0SN.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>American lobster</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                                <tr>
-                                    <td class="cart-pic"><img
-                                            src="img/cart-page/xproduct-3.jpg.pagespeed.ic.SVKwYryXPo.jpg" alt=""></td>
-                                    <td class="cart-title">
-                                        <h5>Guangzhou sweater</h5>
-                                    </td>
-                                    <td class="p-price">$60.00</td>
-                                    <td class="qua-col">
-                                        <div class="quantity">
-                                            <div class="pro-qty">
-                                                <input type="text" value="1">
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td class="total-price">$60.00</td>
-                                    <td class="close-td"><i class="ti-close"></i></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="row justify-content-center mt-2">
                         <div class="col-12 mb-3">
@@ -336,18 +349,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4 col-12 m-auto">
-                    <div class="proceed-checkout">
-                        <ul>
-                            <li class="subtotal">Subtotal <span>$240.00</span></li>
-                            <li class="cart-total">Total <span>$240.00</span></li>
-                        </ul>
-                        <a href="#" class="proceed-btn">PROCEED TO CHECK OUT</a>
+                <div class="col-xl-4 col-md-12 m-auto m-xl-0">
+                    <div class="row justify-content-end">
+                        <div class="col-12">
+                            <div class="proceed-checkout">
+                                <ul>
+                                    <li class="subtotal">Subtotal <span>$240.00</span></li>
+                                    <li class="cart-total">Total <span>$240.00</span></li>
+                                </ul>
+                                <a href="#" class="proceed-btn">PROCEED TO CHECK OUT</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!--======================================================= CART END ======-->
     <footer class="footer-section">
         <div class="container">
             <div class="row">
