All Pages Check

--- a/product-single.html
+++ b/product-single.html
@@ -312,11 +312,14 @@
                         <div class="category mb-2">
                             Category: <span>Thanka</span>
                         </div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti sint, at perferendis est
+                            hic, quis eaque possimus molestias natus ea voluptatem quia illo voluptas rem ratione animi
+                            nobis, ex soluta.</p>
                         <div class="mt-2">
                             <button class="primary-btn">
                                 Add to Cart
                             </button>
-                            <a href="" class="primary-btn">Buy Now</a>
+                            <a href="" class="primary-btn my-md-0 my-2">Buy Now</a>
                         </div>
                     </div>
                 </div>
