--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="nav-item">
             <div class="container">
-                <div class="nav-depart">
+                <div class="nav-depart d-lg-block d-none">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
                         <span>All departments</span>
@@ -152,7 +152,7 @@
                         </ul>
                     </div>
                 </div>
-                <nav class="nav-menu mobile-menu p-0">
+                <nav class="nav-menu mobile-menu p-0 d-lg-block d-none">
                     <ul>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#">Collection</a>
@@ -173,7 +173,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div id="mobile-menu-wrap" class=""></div>
+                <div id="mobile-menu-wrap" class="d-lg-none d-block"></div>
             </div>
         </div>
     </header>
