All Pages Navigation

--- a/delivery.html
+++ b/delivery.html
@@ -36,10 +36,9 @@
                     <a href="#" class="login-panel"><i class="fa fa-user"></i>Login</a>
                     <div class="lan-selector">
                         <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt" data-title="English">
+                            <option value='yt' data-imagecss="flag yt" data-title="English">
                                 English</option>
-                            <option value='yu' data-image="img/flag-2.jpg" data-imagecss="flag yu"
-                                data-title="Bangladesh">German </option>
+                            <option value='yu' data-imagecss="flag yu" data-title="Bangladesh">German </option>
                         </select>
                     </div>
                     <div class="top-social">
@@ -136,7 +135,7 @@
         </div>
         <div class="nav-item">
             <div class="container">
-                <div class="nav-depart">
+                <div class="nav-depart d-lg-block d-none">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
                         <span>All departments</span>
@@ -148,7 +147,7 @@
                         </ul>
                     </div>
                 </div>
-                <nav class="nav-menu mobile-menu p-0">
+                <nav class="nav-menu mobile-menu p-0 d-lg-block d-none">
                     <ul>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#">Collection</a>
@@ -169,7 +168,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div id="mobile-menu-wrap" class=""></div>
+                <div id="mobile-menu-wrap" class="d-lg-none d-block"></div>
             </div>
         </div>
     </header>
@@ -317,9 +316,9 @@
                                                     class="current">Four</span>
                                                 <div class="list">
                                                     <!-- <div class="dd-search">
-                            <input id="txtSearchValue" autocomplete="off" onkeyup="filter()" class="dd-searchbox"
-                              type="text">
-                          </div> -->
+                                              <input id="txtSearchValue" autocomplete="off" onkeyup="filter()" class="dd-searchbox"
+                                                type="text">
+                                            </div> -->
                                                     <ul>
                                                         <li class="option" data-value="1" data-display-text="">Select
                                                             your nearest pickup point</li>
@@ -334,6 +333,7 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
