--- a/product-single.html
+++ b/product-single.html
@@ -37,10 +37,9 @@
                     <a href="#" class="login-panel"><i class="fa fa-user"></i>Login</a>
                     <div class="lan-selector">
                         <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt" data-title="English">
+                            <option value='yt' data-imagecss="flag yt" data-title="English">
                                 English</option>
-                            <option value='yu' data-image="img/flag-2.jpg" data-imagecss="flag yu"
-                                data-title="Bangladesh">German </option>
+                            <option value='yu' data-imagecss="flag yu" data-title="Bangladesh">German </option>
                         </select>
                     </div>
                     <div class="top-social">
@@ -137,7 +136,7 @@
         </div>
         <div class="nav-item">
             <div class="container">
-                <div class="nav-depart">
+                <div class="nav-depart d-lg-block d-none">
                     <div class="depart-btn">
                         <i class="ti-menu"></i>
                         <span>All departments</span>
@@ -149,7 +148,7 @@
                         </ul>
                     </div>
                 </div>
-                <nav class="nav-menu mobile-menu p-0">
+                <nav class="nav-menu mobile-menu p-0 d-lg-block d-none">
                     <ul>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#">Collection</a>
@@ -170,7 +169,7 @@
                         </li>
                     </ul>
                 </nav>
-                <div id="mobile-menu-wrap" class=""></div>
+                <div id="mobile-menu-wrap" class="d-lg-none d-block"></div>
             </div>
         </div>
     </header>
@@ -455,7 +454,7 @@
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                             <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
-                                            <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                            <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="pi-text">
@@ -480,7 +479,7 @@
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                             <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
-                                            <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                            <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="pi-text">
@@ -505,7 +504,7 @@
                                         <ul>
                                             <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                             <li class="quick-view"><a href="shop.html">+ Quick View</a></li>
-                                            <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                            <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="pi-text">
