--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
                     <a href="#" class="login-panel"><i class="fa fa-user"></i>Login</a>
                     <div class="lan-selector">
                         <select class="language_drop" name="countries" id="countries" style="width:300px;">
-                            <option value='yt' data-image="img/flag-1.jpg" data-imagecss="flag yt" data-title="English">
+                            <option value='yt' data-imagecss="flag yt" data-title="English">
                                 English</option>
-                            <option value='yu' data-image="img/flag-2.jpg" data-imagecss="flag yu"
-                                data-title="Bangladesh">German </option>
+                            <option value='yu' data-imagecss="flag yu" data-title="Bangladesh">German </option>
                         </select>
                     </div>
                     <div class="top-social">
@@ -283,7 +282,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -307,7 +306,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -330,7 +329,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -353,7 +352,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -430,7 +429,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -454,7 +453,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -477,7 +476,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
@@ -500,7 +499,7 @@
                                 <ul>
                                     <li class="w-icon active"><a href="#"><i class="icon_bag_alt"></i></a></li>
                                     <li class="quick-view"><a href="product-single.html">+ Quick View</a></li>
-                                    <li class="w-icon"><a href="#"><i class="fa fa-random"></i></a></li>
+                                    <li class="w-icon"><a href="#"><i class="fa fa-heart"></i></a></li>
                                 </ul>
                             </div>
                             <div class="pi-text">
